Fixed spacing of members page

--- a/src/components/team/membersPage/Mentors.module.css
+++ b/src/components/team/membersPage/Mentors.module.css
@@ -3,8 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-
-  margin-top: 50px;
+  margin-top: 24px;
 }
 
 .container {
@@ -12,19 +11,15 @@
   max-width: 1400px;
 }
 
-.title {
-
-}
-
 .list {
-  max-width: 95%;
-
+  max-width: 94%;
   height: 350;
   margin: auto;
-
   display: flex;
   overflow-x: auto;
   align-items: center;
+  margin-left: 0;
+  margin-bottom: 6vh;
 }
 
 .card {
